various findbugs fixes ...